Implement task addition modal
Added a modal for adding tasks with input fields and buttons.

--- a/index.html
+++ b/index.html
@@ -31,26 +31,49 @@
 
 <button onclick="logout()" class="text-red-400 text-sm mb-3">Logout</button>
 
-<!-- ADD TASK -->
-<div class="bg-slate-900 p-4 rounded-xl mb-4">
-  <h3 class="font-bold mb-2">➕ Tambah Garapan</h3>
+  <!-- MODAL -->
+<div id="taskModal"
+  class="fixed inset-0 bg-black/70 hidden flex items-center justify-center z-50">
 
-  <input id="taskName" class="w-full p-2 rounded text-black mb-2" placeholder="Nama Airdrop">
-  <input id="taskWallet" class="w-full p-2 rounded text-black mb-2" placeholder="Wallet / Label">
-  <input id="taskLink" class="w-full p-2 rounded text-black mb-2" placeholder="Link (opsional)">
+  <div class="bg-slate-900 p-5 rounded-xl w-full max-w-md mx-4">
+    <h3 class="font-bold mb-3 text-lg">➕ Tambah Garapan</h3>
 
-  <select id="taskType" class="w-full p-2 rounded text-black mb-2">
-    <option value="testnet">Testnet</option>
-    <option value="point">Point</option>
-    <option value="social">Social</option>
-    <option value="retro">Retro</option>
-    <option value="other">Other</option>
-  </select>
+    <input id="taskName" class="w-full p-2 rounded text-black mb-2"
+      placeholder="Nama Airdrop">
 
-  <button onclick="addTask()" class="bg-green-500 w-full py-2 rounded font-bold">
-    Tambah
-  </button>
+    <input id="taskWallet" class="w-full p-2 rounded text-black mb-2"
+      placeholder="Wallet / Label">
+
+    <input id="taskLink" class="w-full p-2 rounded text-black mb-2"
+      placeholder="Link (opsional)">
+
+    <select id="taskType" class="w-full p-2 rounded text-black mb-3">
+      <option value="testnet">Testnet</option>
+      <option value="point">Point</option>
+      <option value="social">Social</option>
+      <option value="retro">Retro</option>
+      <option value="other">Other</option>
+    </select>
+
+    <div class="flex gap-2">
+      <button onclick="submitTask()"
+        class="bg-green-500 flex-1 py-2 rounded font-bold">
+        Tambah
+      </button>
+
+      <button onclick="closeModal()"
+        class="bg-slate-700 flex-1 py-2 rounded">
+        Batal
+      </button>
+    </div>
+  </div>
 </div>
+
+<!-- ADD TASK -->
+<button onclick="openModal()"
+  class="bg-green-500 w-full py-3 rounded-xl font-bold mb-4">
+  ➕ Tambah Garapan
+</button>
 
 <!-- TASK LIST -->
 <div class="bg-slate-900 p-4 rounded-xl mb-4">
@@ -198,6 +221,22 @@ function removeTask(id){
   save();
   render();
 }
+function openModal(){
+  taskModal.classList.remove("hidden");
+}
+
+function closeModal(){
+  taskModal.classList.add("hidden");
+}
+
+function submitTask(){
+  addTask();      // pakai logic lama
+  closeModal();   // tutup modal
+}
+
+  taskModal.addEventListener("click", e => {
+  if(e.target === taskModal) closeModal();
+});
 
 /* ================= RENDER ================= */
 function render(){
