--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 const todayObj = new Date();
 const today = todayObj.toISOString().split("T")[0];
 const year = todayObj.getFullYear();
+const todayEl = document.getElementById("today");
 todayEl.innerText = "📅 " + today;
 
 /* ================= FIREBASE ================= */
