--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
 
 <!-- ================= HEATMAP ================= -->
 <div class="bg-slate-900 p-4 rounded-xl mb-4">
-  <h3 class="font-bold mb-2">📅 Heatmap Bulanan</h3>
-  <div id="monthHeatmap" class="grid grid-cols-3 gap-3"></div>
+  <h3 id="heatmapTitle" class="font-bold mb-2"></h3>
+
+  <div id="monthHeatmap"
+       class="grid grid-cols-7 gap-2 text-xs text-center"></div>
 </div>
 
 <!-- ================= REMINDER ================= -->
@@ -130,6 +132,10 @@ const today = todayObj.toISOString().split("T")[0];
 const year = todayObj.getFullYear();
 const todayEl = document.getElementById("today");
 todayEl.innerText = "📅 " + today;
+const monthNames = [
+  "Januari","Februari","Maret","April","Mei","Juni",
+  "Juli","Agustus","September","Oktober","November","Desember"
+];
 
 /* ================= FIREBASE ================= */
 firebase.initializeApp({
@@ -239,17 +245,37 @@ function render(){
 
 /* ================= HEATMAP ================= */
 function drawHeatmap(){
-  monthHeatmap.innerHTML="";
-  ["Jan","Feb","Mar","Apr","Mei","Jun","Jul","Agu","Sep","Okt","Nov","Des"].forEach((m,i)=>{
-    let c=0;
-    Object.keys(db.history).forEach(d=>{
-      const dt=new Date(d);
-      if(dt.getFullYear()===year&&dt.getMonth()===i)
-        c+=Object.values(db.history[d]).filter(Boolean).length;
-    });
-    monthHeatmap.innerHTML+=`<div class="p-4 rounded text-center ${c?"bg-green-600":"bg-slate-700"}">
-      <b>${m}</b><div class="text-xs">${c}</div></div>`;
-  });
+  monthHeatmap.innerHTML = "";
+
+  const now = new Date();
+  const y = now.getFullYear();
+  const m = now.getMonth(); // bulan aktif (0-11)
+
+  // 🔥 set judul otomatis
+  heatmapTitle.innerText = `📅 Bulan ${monthNames[m]}`;
+
+  const daysInMonth = new Date(y, m + 1, 0).getDate();
+
+  for(let day = 1; day <= daysInMonth; day++){
+    const dateStr =
+      `${y}-${String(m+1).padStart(2,"0")}-${String(day).padStart(2,"0")}`;
+
+    const doneCount =
+      Object.values(db.history[dateStr] || {}).filter(Boolean).length;
+
+    let color = "bg-slate-800";
+    if(doneCount > 0) color = "bg-green-900";
+    if(doneCount > 2) color = "bg-green-600";
+    if(doneCount > 5) color = "bg-green-400";
+
+    monthHeatmap.innerHTML += `
+      <div class="aspect-square rounded ${color}
+                  flex items-center justify-center"
+           title="${dateStr} : ${doneCount} task">
+        ${day}
+      </div>
+    `;
+  }
 }
 
 /* ================= REMINDER ================= */
