Update monthHeatmap div for responsive grid layout

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
   <h3 id="heatmapTitle" class="font-bold mb-2"></h3>
 
   <div id="monthHeatmap"
-    class="grid grid-cols-7 gap-1 text-[10px]"></div>
+  class="grid grid-cols-7 sm:grid-cols-7 md:grid-cols-14 lg:grid-cols-21
+         gap-1 text-[10px] justify-center"></div>
 </div>
 
 <!-- ================= REMINDER ================= -->
